@@ -1,6 +1,18 @@
 RC 4
 ====
 
+- Fixed IOC-80
+  "StartableFacility erroneously tries to start a component before
+  RegisterCustomDependency can be called"
+
+- Added ComponentModelConverter to utilize System.ComponentModel TypeConverters
+  Very useful for converting things like Fonts and Colors
+
+- Updated DefaultComplexConverter to support interfaces and derived types
+
+- Fixed IOC-96
+  "FactorySupport fails to create components if the factory instance is a proxy"
+
 - Fixed IOC-93
   "GenericListConverter does not handle service overrides properly" 
 
